--- a/home/home.html
+++ b/home/home.html
@@ -7,13 +7,14 @@
   <link rel="stylesheet" href="home.css">
   <title>Portaal Studenten</title>
 </head>
+<div id="ff">
 <div class="container2">
   <h1>Welkom in het portaal voor studenten</h1>
 <a href="/fullstackproject/login/login.php" id="login">Inloggen</a>
 <a href="/fullstackproject/signup/signup.php" id="signup">Aanmelden</a>
 
 </div>
-
+</div>
   
 </body>
 </html>
